--- a/charts/seed-monitoring/charts/core/charts/prometheus/optional-rules/cluster-autoscaler.rules.yaml
+++ b/charts/seed-monitoring/charts/core/charts/prometheus/optional-rules/cluster-autoscaler.rules.yaml
@@ -1,7 +1,7 @@
 groups:
 - name: cluster-autoscaler.rules
   rules:
-  - alert: ClusterAutoscallerDown
+  - alert: ClusterAutoscalerDown
     expr: absent(up{job="cluster-autoscaler"} == 1)
     for: 7m
     labels:
