--- a/charts/seed-monitoring/charts/core/charts/prometheus/rules-tests/kube-apiserver.rules.test.yaml
+++ b/charts/seed-monitoring/charts/core/charts/prometheus/rules-tests/kube-apiserver.rules.test.yaml
@@ -85,7 +85,7 @@ tests:
         visibility: owner
         verb: POST
       exp_annotations:
-        description: Kube API server latency for verb POST is high. This could be because the shoot workers and the control plane are in different regions. 99th percentile of request latency is greater than 3 second.
+        description: Kube API server latency for verb POST is high. This could be because the shoot workers and the control plane are in different regions. 99th percentile of request latency is greater than 3 seconds.
         summary: Kubernetes API server latency is high
   - eval_time: 16m
     alertname: KubeApiServerTooManyAuditlogFailures
