--- a/charts/seed-monitoring/charts/core/charts/prometheus/rules/kube-apiserver.rules.yaml
+++ b/charts/seed-monitoring/charts/core/charts/prometheus/rules/kube-apiserver.rules.yaml
@@ -23,6 +23,19 @@ groups:
     annotations:
       description: All API server replicas are down/unreachable, or all API server could not be found.
       summary: API server unreachable.
+  # Some verbs excluded because they are expected to be long-lasting:
+  # WATCHLIST is long-poll, CONNECT is `kubectl exec`.
+  - alert: KubeApiServerLatency
+    expr: histogram_quantile(0.99, sum without (instance,resource) (rate(apiserver_request_duration_seconds_bucket{subresource!="log",verb!~"CONNECT|WATCHLIST|WATCH|PROXY proxy"}[5m]))) > 3
+    for: 30m
+    labels:
+      service: kube-apiserver
+      severity: warning
+      type: seed
+      visibility: owner
+    annotations:
+      description: Kube API server latency for verb {{ $labels.verb }} is high. This could be because the shoot workers and the control plane are in different regions. 99th percentile of request latency is greater than 3 seconds.
+      summary: Kubernetes API server latency is high
   - alert: KubeApiServerTooManyOpenFileDescriptors
     expr: 100 * process_open_fds{job="kube-apiserver"} / process_max_fds > 50
     for: 30m
@@ -45,19 +58,6 @@ groups:
     annotations:
       description: 'The API server ({{ $labels.instance }}) is using {{ $value }}% of the available file/socket descriptors.'
       summary: 'The API server has too many open file descriptors'
-  # Some verbs excluded because they are expected to be long-lasting:
-  # WATCHLIST is long-poll, CONNECT is `kubectl exec`.
-  - alert: KubeApiServerLatency
-    expr: histogram_quantile(0.99, sum without (instance,resource) (apiserver_request_duration_seconds_bucket{subresource!="log",verb!~"CONNECT|WATCHLIST|WATCH|PROXY proxy"})) > 3.0
-    for: 30m
-    labels:
-      service: kube-apiserver
-      severity: warning
-      type: seed
-      visibility: owner
-    annotations:
-      description: Kube API server latency for verb {{ $labels.verb }} is high. This could be because the shoot workers and the control plane are in different regions. 99th percentile of request latency is greater than 3 seconds.
-      summary: Kubernetes API server latency is high
   # TODO replace with better metrics in the future (wyb1)
   - record: shoot:apiserver_watch_duration:quantile
     expr: histogram_quantile(0.2, sum(rate(apiserver_request_duration_seconds_bucket{verb="WATCH",resource=~"configmaps|deployments|secrets|daemonsets|services|nodes|pods|namespaces|endpoints|statefulsets|clusterroles|roles"}[5m])) by (le,scope,resource))
