Add the service label to KubeApiServerTooManyAuditlogFailures
We'll group by service, instead of by cluster, so the service label should
be set on all the alerts.

Co-authored-by: wyb1 <wesley.bermbach@sap.com>
Co-authored-by: Istvan Zoltan Ballok <istvan.zoltan.ballok@sap.com>

--- a/charts/seed-monitoring/charts/core/charts/prometheus/rules-tests/kube-apiserver.rules.test.yaml
+++ b/charts/seed-monitoring/charts/core/charts/prometheus/rules-tests/kube-apiserver.rules.test.yaml
@@ -91,6 +91,7 @@ tests:
     alertname: KubeApiServerTooManyAuditlogFailures
     exp_alerts:
     - exp_labels:
+        service: auditlog
         severity: critical
         type: seed
         visibility: operator
