--- a/charts/seed-monitoring/charts/core/charts/prometheus/rules/kube-kubelet.rules.yaml
+++ b/charts/seed-monitoring/charts/core/charts/prometheus/rules/kube-kubelet.rules.yaml
@@ -16,7 +16,7 @@ groups:
     expr: 100 * process_open_fds{job=~"^(?:kube-kubelet)$"} / process_max_fds{job=~"^(?:kube-kubelet)$"} > 50
     for: 30m
     labels:
-      service: kube-kubelet-shoot
+      service: kube-kubelet
       severity: warning
       type: shoot
       visibility: owner
@@ -27,7 +27,7 @@ groups:
     expr: 100 * process_open_fds{job="kube-kubelet"} / process_max_fds{job="kube-kubelet"} > 80
     for: 30m
     labels:
-      service: kube-kubelet-shoot
+      service: kube-kubelet
       severity: critical
       type: shoot
       visibility: owner
@@ -38,7 +38,7 @@ groups:
     expr: 100 * process_open_fds{job="kube-kubelet-seed"} / process_max_fds{job="kube-kubelet-seed"} > 80
     for: 30m
     labels:
-      service: kube-kubelet-seed
+      service: kube-kubelet
       severity: critical
       type: seed
       visibility: operator
@@ -49,7 +49,7 @@ groups:
     expr: 100 * kubelet_volume_stats_available_bytes / kubelet_volume_stats_capacity_bytes < 5
     for: 1h
     labels:
-      service: kube-kubelet-seed
+      service: kube-kubelet
       severity: critical
       type: seed
       visibility: operator
@@ -67,7 +67,7 @@ groups:
       predict_linear(kubelet_volume_stats_available_bytes{type="seed", persistentvolumeclaim!~"loki-.*"}[30m], 4 * 24 * 3600) <= 0
     for: 1h
     labels:
-      service: kube-kubelet-seed
+      service: kube-kubelet
       severity: warning
       type: seed
       visibility: operator
